# Fastapi-React-App

./: .gitignore  123.txt  README.md
FastAPI/: database.py  main.py  pyproject.toml
React/finance-app/: package-lock.json
React/finance-app/public/: index.html
React/finance-app/src/: App.js
