[tool.poetry]
name = "fastapi-react-app"
version = "0.1.0"
description = ""
authors = ["leon <90852553+leon0719@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = "^2.0.22"
fastapi = {extras = ["all"], version = "^0.104.1"}
pydantic-settings = "^2.0.3"


[tool.poetry.group.dev.dependencies]
black = "^23.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
